--- a/ref.bib
+++ b/ref.bib
@@ -15,3 +15,191 @@
   publisher = {Addison-Wesley Boston, MA}
 }
 
+@incollection{appel2011verified,
+  author    = {Andrew W. Appel},
+  title     = {Verified Software Toolchain},
+  editor    = {Gilles Barthe},
+  booktitle = {Programming Languages and Systems (ESOP 2011), Lecture Notes in Computer Science, vol. 6602},
+  publisher = {Springer, Berlin, Heidelberg},
+  year      = {2011},
+  pages     = {1--17},
+  doi       = {10.1007/978-3-642-19718-5_1},
+}
+
+@inproceedings{SEL4,
+  author       = {Gerwin Klein and Kevin Elphinstone and Gernot Heiser and June Andronick and David Cock and Philip Derrin and Dhammika Elkaduwe and Kai Engelhardt and Rafal Kolanski and Michael Norrish and et al.},
+  title        = {{seL4}: Formal Verification of an OS Kernel},
+  booktitle    = {Proceedings of the ACM SIGOPS 22nd Symposium on Operating Systems Principles},
+  year         = {2009},
+  pages        = {207--220},
+}
+
+@inproceedings{leroy2006certification,
+  author       = {Xavier Leroy},
+  title        = {Formal Certification of a Compiler Back-End or: Programming a Compiler with a Proof Assistant},
+  booktitle    = {Conference Record of the 33rd {ACM} {SIGPLAN}-{SIGACT} Symposium on Principles of Programming Languages},
+  year         = {2006},
+  pages        = {42--54},
+}
+
+@inproceedings{woos2016raft,
+  author       = {Doug Woos and James R. Wilcox and Steve Anton and Zachary Tatlock and Michael D. Ernst and Thomas Anderson},
+  title        = {Planning for Change in a Formal Verification of the Raft Consensus Protocol},
+  booktitle    = {Proceedings of the 5th {ACM} {SIGPLAN} Conference on Certified Programs and Proofs},
+  year         = {2016},
+  pages        = {154--165},
+}
+
+@incollection{jacobs2011verifast,
+  author       = {Bart Jacobs and Jan Smans and Pieter Philippaerts and Frank Vogels and Wouter Penninckx and Frank Piessens},
+  title        = {{VeriFast}: A Powerful, Sound, Predictable, Fast Verifier for C and Java},
+  booktitle    = {NASA Formal Methods (NFM 2011), Lecture Notes in Computer Science, vol. 6617},
+  editor       = {Margaret H. Smith Bobaru and Klaus Havelund and Gerard J. Holzmann and Rupak Joshi},
+  publisher    = {Springer, Berlin / Heidelberg},
+  year         = {2011},
+  pages        = {1--18}, 
+  doi          = {10.1007/978-3-642-20398-5_4},
+}
+
+@article{VST-FLOYD,
+  author       = {Qixuan Cao and Lars Beringer and Stefan Grüter and et al.},
+  title        = {{VST-Floyd}: A Separation Logic Tool to Verify Correctness of C Programs},
+  journal      = {Journal of Automated Reasoning},
+  volume       = {61},
+  pages        = {367--422},
+  year         = {2018},
+  doi          = {10.1007/s10817-018-9457-5},
+}
+
+@article{zhou2023vsta,
+  author       = {Litao Zhou and Jianxing Qin and Qinshi Wang and Andrew W. Appel and Qinxiang Cao},
+  title        = {{VST-A}: A Foundationally Sound Annotation Verifier},
+  journal      = {Proceedings of the ACM on Programming Languages (POPL)},
+  volume       = {8},
+  number       = {POPL},
+  pages        = {2069--2098},
+  year         = {2023},
+  doi          = {10.1145/3632911},
+}
+
+@book{bertot2004coqart,
+  author       = {Yves Bertot and Pierre Castéran},
+  title        = {Interactive Theorem Proving and Program Development: Coq`Art: The Calculus of Inductive Constructions},
+  publisher    = {Springer},
+  year         = {2004},
+  address      = {Berlin},
+}
+
+@incollection{gordon1988hol,
+  author       = {Michael J. C. Gordon},
+  title        = {{HOL}: A Proof Generating System for Higher-Order Logic},
+  booktitle    = {VLSI Specification, Verification and Synthesis, The Kluwer International Series in Engineering and Computer Science, vol. 35},
+  editor       = {G. Birtwistle and P. A. Subrahmanyam},
+  publisher    = {Springer, Boston, MA},
+  year         = {1988},
+  pages        = {161--177}, 
+  doi          = {10.1007/978-1-4613-2007-4_3},
+}
+
+@inproceedings{deMoura2013lean,
+  author       = {Leonardo de Moura and Jeremy Avigad},
+  title        = {Lean: A Theorem Prover and Programming Language},
+  booktitle    = {Proceedings of the International Conference on Interactive Theorem Proving (ITP)},
+  year         = {2013},
+}
+
+@article{HoareLogic,
+  author       = {C. A. R. Hoare},
+  title        = {An Axiomatic Basis for Computer Programming},
+  journal      = {Communications of the ACM},
+  volume       = {12},
+  number       = {10},
+  pages        = {576--580},
+  month        = {Oct},
+  year         = {1969},
+  doi          = {10.1145/363235.363259},
+}
+
+@book{reynolds2002separation,
+  author       = {John C. Reynolds},
+  title        = {Separation Logic: A Logic for Shared Mutable Data Structures},
+  publisher    = {Springer},
+  year         = {2002},
+}
+
+@inproceedings{leroy2016compcert,
+  author       = {Xavier Leroy and Sandrine Blazy and Daniel Kästner and Bernhard Schommer and Markus Pister and et al.},
+  title        = {{CompCert} — A Formally Verified Optimizing Compiler},
+  booktitle    = {ERTS 2016: Embedded Real Time Software and Systems, 8th European Congress, SEE},
+  year         = {2016},
+  address      = {Toulouse, France},
+  note         = {ffhal-01238879},
+}
+
+@article{murali2024predictable,
+  author       = {Adithya Murali and Cody Rivera and P. Madhusudan},
+  title        = {Predictable Verification using Intrinsic Definitions},
+  journal      = {Proceedings of the ACM on Programming Languages},
+  volume       = {8},
+  number       = {PLDI},
+  pages        = {1804--1829},
+  year         = {2024},
+  doi          = {10.1145/3656450},
+}
+
+@article{krogmeier2022synthesizing,
+  author         = {Paul Krogmeier and Zhengyao Lin and Adithya Murali and P. Madhusudan},
+  title          = {Synthesizing Axiomatizations using Logic Learning},
+  journal        = {Proceedings of the ACM on Programming Languages},
+  volume         = {6},
+  number         = {OOPSLA2},
+  article_number = {185},
+  pages          = {1--29},
+  year           = {2022},
+  month          = oct,
+  doi            = {10.1145/3563348},
+}
+
+@inproceedings{chajed2022daisynfs,
+  author    = {Tej Chajed and Joseph Tassarotti and Mark Theng and M. Frans Kaashoek and Nickolai Zeldovich},
+  title     = {Verifying the DaisyNFS Concurrent and Crash-Safe File System with Sequential Reasoning},
+  booktitle = {16th {USENIX} Symposium on Operating Systems Design and Implementation (OSDI 22)},
+  pages     = {447--463},
+  year      = {2022},
+  publisher = {USENIX Association},
+  url       = {https://www.usenix.org/conference/osdi22/presentation/chajed},
+}
+
+@manual{rocq2025,
+  title        = {Rocq: The Coq Proof Assistant (formerly Coq)},
+  author       = {{Rocq} Development Team},
+  organization = {Logical Software Institute},
+  year         = {2025},
+  note         = {Version 1.0},
+  url          = {https://rocq.org/},
+}
+
+@inproceedings{leino2006dafny,
+  author       = {Rustan M. Leino},
+  title        = {Dafny: An Automatic Program Verifier for Functional Correctness},
+  booktitle    = {Proceedings of the 16th International Conference on Logic for Programming, Artificial Intelligence and Reasoning (LPAR)},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {4246},
+  pages        = {348--370},
+  year         = {2006},
+  publisher    = {Springer},
+  doi          = {10.1007/11823234\_18},
+}
+
+@inproceedings{deMoura2008z3,
+  author    = {Leonardo de Moura and Nikolaj Bj{\o}rner},
+  title     = {{Z3}: An Efficient SMT Solver},
+  booktitle = {Tools and Algorithms for the Construction and Analysis of Systems (TACAS 2008)},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {4963},
+  pages     = {337--340},
+  year      = {2008},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-540-78800-3_24},
+  isbn      = {978-3-540-78799-0},
+}
