Finishing Most Parts, except IMPL.

--- a/ref.bib
+++ b/ref.bib
@@ -203,3 +203,27 @@
   doi       = {10.1007/978-3-540-78800-3_24},
   isbn      = {978-3-540-78799-0},
 }
+
+@article{dijkstra1975guarded,
+  author    = {Edsger W. Dijkstra},
+  title     = {Guarded Commands, Nondeterminacy and Formal Derivation of Programs},
+  journal   = {Communications of the ACM},
+  year      = {1975},
+  volume    = {18},
+  number    = {8},
+  pages     = {453--457},
+  doi       = {10.1145/360933.360975},
+}
+
+@article{lattuada2023verus,
+  author         = {Andrea Lattuada and Travis Hance and Chanhee Cho and Matthias Brun and Isitha Subasinghe and Yi Zhou and Jon Howell and Bryan Parno and Chris Hawblitzel},
+  title          = {Verus: Verifying Rust Programs using Linear Ghost Types},
+  journal        = {Proceedings of the ACM on Programming Languages},
+  volume         = {7},
+  number         = {OOPSLA1},
+  article_number = {85},
+  year           = {2023},
+  month          = apr,
+  pages          = {1--30},
+  doi            = {10.1145/3586037},
+}
